# catAPP

./: .gitignore  .gitignore   .pre-commit-config.yaml  README.md  cofirmation.py  pyproject.toml
catogramm/: db.sqlite3
catogramm/catogramm/: settings.py  urls.py
my_app/: cofirmation.py  db.sqlite3  mail_confirmation.py  manage.py  thumbnail_maker.py
my_app/api/: serializers.py  urls.py  views.py
my_app/catapp/: .gitignore  admin.py  forms.py  models.py  urls.py  views.py
my_app/catapp/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_remove_user_name_alter_user_username.py  0004_alter_user_username.py  0005_remove_images_preview_image_path.py  0006_images_preview_image_url.py  0007_rename_image_path_images_image_and_more.py  0008_alter_images_image_alter_images_preview_image.py  0009_alter_images_image_alter_images_preview_image.py  0010_remove_images_preview_image.py  0011_images_preview_image.py  0012_remove_images_preview_image_posts_preview_image.py  0013_remove_posts_tags_remove_posttags_tag_posttags_name_and_more.py  0014_rename_name_posttags_tag.py  0015_alter_images_image_alter_posts_preview_image.py  0016_alter_images_image.py  0017_alter_images_image_alter_posts_preview_image.py  0018_alter_images_image_alter_posts_preview_image_and_more.py
my_app/catapp/templates/: about.html  base.html  confirmation.html  edit_profile.html  home.html  login.html  new_post.html  post.html  profile.html  register.html
my_app/catapp/views/: about.py  (+11 more)
my_app/catogramm/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
