[tool.poetry]
name = "task-12"
version = "0.1.0"
description = ""
authors = ["hitehnik132@gmail.com <hitehnik132@gmail.com>"]
readme = "README.md"
packages = [{include = "task_12"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
